Set schema in table properties correctly in shouldReportRootPartitionsSplitOnByteArray